# giskard_core

./: .gitignore  .travis.yml  CMakeLists.txt  Named inputs - README.md  README.md  catkin.options  dependencies.rosinstall  package.xml
examples/: flying-cup-motion.yaml
include/giskard/: exceptions.hpp  expression_arrays.hpp  expression_extraction.hpp  expression_generation.hpp  expressiontree.hpp  giskard.hpp  kdl_typedefs.hpp  qp_controller.hpp  qp_problem_builder.hpp  scope.hpp  slerp.hpp  specifications.hpp  structs.hpp  yaml_parser.hpp
include/giskard_core/: expression_arrays.hpp  expression_extraction.hpp  expression_generation.hpp  expressiontree.hpp  giskard_core.hpp  qp_controller.hpp  qp_controller_projection.hpp  qp_controller_spec_generator.hpp  qp_problem_builder.hpp  robot.hpp  scope.hpp  slerp.hpp  specifications.hpp  whole_body_control_params.hpp  yaml_parser.hpp
rosinstall/: catkin.rosinstall
scripts/: extract_expression.py
src/giskard/: extract_expression.cpp  yaml-parser.cpp
src/giskard_core/: extract_expression.cpp
test/giskard/: boxy_fk.cpp  double_expression_generation.cpp  equality.cpp  expression_arrays.cpp  expression_scope.cpp  flying_cup.cpp  frame_expression_generation.cpp  pr2_cart_cart.cpp  pr2_fk.cpp  pr2_ik.cpp  qp_controller.cpp  qp_problem_builder.cpp  rotation_control.cpp  rotation_expression_generation.cpp  scope.cpp  slerp.cpp  vector_expression_generation.cpp  yaml_parser.cpp
test/giskard_core/: boxy_fk.cpp  double_expression_generation.cpp  equality.cpp  expression_arrays.cpp  flying_cup.cpp  frame_expression_generation.cpp  pr2_cart_cart.cpp  pr2_fk.cpp  pr2_ik.cpp  qp_controller.cpp  qp_controller_projection.cpp  qp_controller_spec_generator.cpp  qp_problem_builder.cpp  robot.cpp  rotation_control.cpp  rotation_expression_generation.cpp  scope.cpp  slerp.cpp  vector_expression_generation.cpp  whole_body_control_params.cpp  yaml_parser.cpp
test_data/: broken_flying_cup.yaml  flying_cup_approach_motion.yaml  input-list.yaml  named_input_test.yaml  pr2_cart_cart_control.yaml  pr2_left_arm.urdf  pr2_left_arm_expression_map.yaml  pr2_left_arm_scope.yaml  pr2_left_arm_single_expression.yaml  pr2_qp_position_control.yaml  pr2_qp_position_control_with_deactivated_controllables.yaml  pr2_qp_position_control_with_excess_observables.yaml  project_point_into_plane.yaml
