<?xml version="1.0"?>
<package format="2">
  <name>giskard</name>
  <version>0.1.0</version>
  <description>The giskard package</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/giskard</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml_cpp</depend>
  <depend>expressiongraph</depend>
  <depend>qpoases</depend>
  <test_depend>gtest</test_depend>
</package>
