<?xml version="1.0"?>
<package format="2">
  <name>giskard_core</name>
  <version>0.1.3</version>
  <description>
    This package provides the core C++ library of giskard, a constraint and
    optimization-based framework for robot motion control.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml-cpp</depend>
  <depend>expressiongraph</depend>
  <depend>qpoases</depend>
  <depend>kdl_parser</depend>
  <test_depend>kdl_parser</test_depend>
  <test_depend>gtest</test_depend>
</package>
